--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,8 +2,8 @@ name: Atualizar README com Últimos Repositórios
 
 on:
   schedule:
-    - cron: "0 */2 * * *" # roda a cada 6 horas
-  workflow_dispatch: # permite executar manualmente
+    - cron: "0 */2 * * *" # A cada 6 horas
+  workflow_dispatch: # Manual
 
 jobs:
   update-readme:
@@ -18,50 +18,10 @@ jobs:
           node-version: '16'
 
       - name: Instala dependências
-        run: npm install -g axios
+        run: npm install axios
 
-      - name: Atualiza README.md
-        run: |
-          node << 'EOF'
-          const fs = require('fs');
-          const axios = require('axios');
-
-          const username = 'Adrinho3677';
-
-          async function getRepos() {
-            const res = await axios.get(`https://api.github.com/users/${username}/repos?sort=updated&per_page=3`);
-            return res.data.map(repo => ({
-              name: repo.name,
-              url: repo.html_url,
-              desc: repo.description || 'Sem descrição',
-              updated: repo.updated_at.split('T')[0]
-            }));
-          }
-
-          function updateReadme(repos) {
-            const readme = fs.readFileSync('README.md', 'utf8');
-
-            const start = '<!--PROJETOS:START-->';
-            const end = '<!--PROJETOS:END-->';
-
-            const regex = new RegExp(`${start}[\\s\\S]*${end}`, 'm');
-
-            const list = repos.map(
-              r => `- 🚀 [**${r.name}**](${r.url}) — ${r.desc} (Atualizado em ${r.updated})`
-            ).join('\n');
-
-            const newSection = `${start}\n${list}\n${end}`;
-
-            const updated = readme.replace(regex, newSection);
-
-            fs.writeFileSync('README.md', updated);
-          }
-
-          (async () => {
-            const repos = await getRepos();
-            updateReadme(repos);
-          })();
-          EOF
+      - name: Executa script para atualizar README
+        run: node update-readme.js
 
       - name: Commit e Push
         run: |
